Fix navbar scroll glitch on mobile
Why - Once reached to the top when scrolling on mobile, the screen would
automatically scroll down and the navbar would disappear. Also renamed
the class for appropriate name because the class removes the navbar

--- a/public/merch.css
+++ b/public/merch.css
@@ -26,7 +26,7 @@ nav {
     transition: transform 0.2s;
     width: 100%;
 }
-.nav--appear {
+.nav--remove {
     transform: translateY(-50px);
 }
 nav ul {
